--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -479,18 +479,18 @@
 	"//block.mubble.black_concrete_button": "Black Concrete Button",
 
 	"block.mubble.footblock": "Bloc de foot",
-	"//block.mubble.blue_cloud_block": "Blue Cloud Block",
-	"//block.mubble.light_blue_cloud_block": "Light Blue Cloud Block",
-	"//block.mubble.cyan_cloud_block": "Cyan Cloud Block",
-	"//block.mubble.green_cloud_block": "Green Cloud Block",
-	"//block.mubble.lime_cloud_block": "Lime Cloud Block",
-	"//block.mubble.yellow_cloud_block": "Yellow Cloud Block",
-	"//block.mubble.orange_cloud_block": "Orange Cloud Block",
-	"//block.mubble.red_cloud_block": "Red Cloud Block",
-	"//block.mubble.pink_cloud_block": "Pink Cloud Block",
-	"//block.mubble.magenta_cloud_block": "Magenta Cloud Block",
-	"//block.mubble.purple_cloud_block": "Purple Cloud Block",
-	"//block.mubble.brown_cloud_block": "Brown Cloud Block",
+	"block.mubble.blue_cloud_block": "Bloc de nuage bleu",
+	"block.mubble.light_blue_cloud_block": "Bloc de nuage bleu clair",
+	"block.mubble.cyan_cloud_block": "Bloc de nuage cyan",
+	"block.mubble.green_cloud_block": "Bloc de nuage vert",
+	"block.mubble.lime_cloud_block": "Bloc de nuage vert clair",
+	"block.mubble.yellow_cloud_block": "Bloc de nuage jaune",
+	"block.mubble.orange_cloud_block": "Bloc de nuage orange",
+	"block.mubble.red_cloud_block": "Bloc de nuage rouge",
+	"block.mubble.pink_cloud_block": "Bloc de nuage rose",
+	"block.mubble.magenta_cloud_block": "Bloc de nuage magenta",
+	"block.mubble.purple_cloud_block": "Bloc de nuage violet",
+	"block.mubble.brown_cloud_block": "Bloc de nuage marron",
 	"block.mubble.white_cloud_block": "Bloc de nuage blanc",
 	"block.mubble.light_gray_cloud_block": "Bloc de nuage gris clair",
 	"block.mubble.gray_cloud_block": "Bloc de nuage gris",
@@ -865,6 +865,11 @@
 
 
 
+	"comment": "EFFECTS",
+	"effect.mubble.heaviness": "Lourdeur",
+
+
+
 	"comment": "BIOMES",
 	"biome.mubble.autumn_oak_forest": "Forêt de chênes d'automne",
 	"biome.mubble.pink_cherry_oak_forest": "Forêt de cerisiers roses",
@@ -876,29 +881,29 @@
 
 
 	"comment": "SUBTITLES",
-	"subtitles.block.note_block.jump": "Bloc note utilisé",
-	"subtitles.block.question_block.mubble.loot.super_mushroom": "Super champignon sorti d'un bloc ?",
-	"subtitles.block.question_block.mubble.loot.coin": "Pièce sortie d'un bloc ?",
-	"subtitles.block.spring.trigger": "Ressort déclenché",
-	"subtitles.item.annoying_dog.disappear": "Disparition de chien agaçant",
-	"subtitles.item.annoying_dog.bark": "Aboiement de chien agaçant",
-	"subtitles.item.cape_feather.use": "Plume acrobate utilisée",
-	"subtitles.item.smash_ball.use": "Balle Smash utilisée",
-	"subtitles.costume.cappy.ambient": "Marmonnement de Cappy",
-	"subtitles.costume.cappy.ambient.nether": "Marmonnement essouflé de Cappy",
-	"subtitles.costume.cappy.equip": "Cappy équipé",
-	"subtitles.costume.cappy.happy": "Marmonnement heureux de Cappy",
-	"subtitles.costume.cappy.help": "Cappy demande de l'aide",
-	"subtitles.entity.chincho.ambient": "Chincho qui parle",
-	"subtitles.entity.chincho.hurt": "Chincho blessé",
-	"subtitles.entity.chincho.death": "Chincho qui meurt",
-	"subtitles.entity.toad.ambient": "Marmonnement de Toad",
-	"subtitles.entity.toad.hurt": "Toad blessé",
-	"subtitles.entity.toad.death": "Toad qui meurt",
-	"subtitles.entity.zombie_cowman.ambient": "Grognement de vache-zombie",
-	"subtitles.entity.zombie_cowman.hurt": "Vache-zombie blessée",
-	"subtitles.entity.zombie_cowman.angry": "Vache-zombie en colère",
-	"subtitles.entity.zombie_cowman.death": "Vache-zombie qui meurt",
+	"subtitles.mubble.block.note_block.jump": "Bloc note utilisé",
+	"subtitles.mubble.block.question_block.mubble.loot.super_mushroom": "Super champignon sorti d'un bloc ?",
+	"subtitles.mubble.block.question_block.mubble.loot.coin": "Pièce sortie d'un bloc ?",
+	"subtitles.mubble.block.spring.trigger": "Ressort déclenché",
+	"subtitles.mubble.item.annoying_dog.disappear": "Disparition de chien agaçant",
+	"subtitles.mubble.item.annoying_dog.bark": "Aboiement de chien agaçant",
+	"subtitles.mubble.item.cape_feather.use": "Plume acrobate utilisée",
+	"subtitles.mubble.item.smash_ball.use": "Balle Smash utilisée",
+	"subtitles.mubble.costume.cappy.ambient": "Marmonnement de Cappy",
+	"subtitles.mubble.costume.cappy.ambient.nether": "Marmonnement essouflé de Cappy",
+	"subtitles.mubble.costume.cappy.equip": "Cappy équipé",
+	"subtitles.mubble.costume.cappy.happy": "Marmonnement heureux de Cappy",
+	"subtitles.mubble.costume.cappy.help": "Cappy demande de l'aide",
+	"subtitles.mubble.entity.chincho.ambient": "Chincho qui parle",
+	"subtitles.mubble.entity.chincho.hurt": "Chincho blessé",
+	"subtitles.mubble.entity.chincho.death": "Chincho qui meurt",
+	"subtitles.mubble.entity.toad.ambient": "Marmonnement de Toad",
+	"subtitles.mubble.entity.toad.hurt": "Toad blessé",
+	"subtitles.mubble.entity.toad.death": "Toad qui meurt",
+	"subtitles.mubble.entity.zombie_cowman.ambient": "Grognement de vache-zombie",
+	"subtitles.mubble.entity.zombie_cowman.hurt": "Vache-zombie blessée",
+	"subtitles.mubble.entity.zombie_cowman.angry": "Vache-zombie en colère",
+	"subtitles.mubble.entity.zombie_cowman.death": "Vache-zombie qui meurt",
 
 
 
