--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -865,6 +865,11 @@
 
 
 
+	"comment": "EFFECTS",
+	"//effect.mubble.heaviness": "Heaviness",
+
+
+
 	"comment": "BIOMES",
 	"//biome.mubble.autumn_oak_forest": "Autumn Oak Forest",
 	"//biome.mubble.pink_cherry_oak_forest": "Pink Cherry Oak Forest",
@@ -877,13 +882,13 @@
 
 	"comment": "SUBTITLES",
 	"//subtitles.block.note_block.jump": "<newline>",
-	"subtitles.block.question_block.mubble.loot.super_mushroom": "Bloque ? suelta un súper champiñón",
-	"subtitles.block.question_block.mubble.loot.coin": "Bloque ? suelta una moneda",
+	"subtitles.mubble.block.question_block.mubble.loot.super_mushroom": "Bloque ? suelta un súper champiñón",
+	"subtitles.mubble.block.question_block.mubble.loot.coin": "Bloque ? suelta una moneda",
 	"//subtitles.block.spring.trigger": "Spring triggered",
 	"//subtitles.item.annoying_dog.disappear": "<newline>",
 	"//subtitles.item.annoying_dog.bark": "<newline>",
-	"subtitles.item.cape_feather.use": "Pluma utilizada",
-	"subtitles.item.smash_ball.use": "Bola de Smash utilizada",
+	"subtitles.mubble.item.cape_feather.use": "Pluma utilizada",
+	"subtitles.mubble.item.smash_ball.use": "Bola de Smash utilizada",
 	"//subtitles.costume.cappy.ambient": "<newline>",
 	"//subtitles.costume.cappy.ambient.nether": "<newline>",
 	"//subtitles.costume.cappy.equip": "<newline>",
@@ -892,9 +897,9 @@
 	"//subtitles.entity.chincho.ambient": "Chincho talks",
 	"//subtitles.entity.chincho.hurt": "Chincho hurts",
 	"//subtitles.entity.chincho.death": "Chincho dies",
-	"subtitles.entity.toad.ambient": "Toad balbucea",
-	"subtitles.entity.toad.hurt": "Toad herido",
-	"subtitles.entity.toad.death": "Toad muere",
+	"subtitles.mubble.entity.toad.ambient": "Toad balbucea",
+	"subtitles.mubble.entity.toad.hurt": "Toad herido",
+	"subtitles.mubble.entity.toad.death": "Toad muere",
 	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
 	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
 	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
