--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -711,7 +711,7 @@
 
 
 	"comment": "ITEMS",
-	"//item.mubble.baguette": "Baguette",
+	"item.mubble.baguette": "long bread thing",
 	"item.mubble.vanadium": "shiny purple",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
 	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
@@ -865,6 +865,11 @@
 
 
 
+	"comment": "EFFECTS",
+	"//effect.mubble.heaviness": "Heaviness",
+
+
+
 	"comment": "BIOMES",
 	"//biome.mubble.autumn_oak_forest": "Autumn Oak Forest",
 	"//biome.mubble.pink_cherry_oak_forest": "Pink Cherry Oak Forest",
@@ -877,13 +882,13 @@
 
 	"comment": "SUBTITLES",
 	"//subtitles.block.note_block.jump": "<newline>",
-	"subtitles.block.question_block.mubble.loot.super_mushroom": "BLOCO ???? drop supa mush",
-	"subtitles.block.question_block.mubble.loot.coin": "BLOCO ???? drop coin",
+	"subtitles.mubble.block.question_block.mubble.loot.super_mushroom": "BLOCO ???? drop supa mush",
+	"subtitles.mubble.block.question_block.mubble.loot.coin": "BLOCO ???? drop coin",
 	"//subtitles.block.spring.trigger": "Spring triggered",
 	"//subtitles.item.annoying_dog.disappear": "<newline>",
 	"//subtitles.item.annoying_dog.bark": "<newline>",
-	"subtitles.item.cape_feather.use": "cap that makes you high jumped was actully used!",
-	"subtitles.item.smash_ball.use": "sm4sh bol uzd",
+	"subtitles.mubble.item.cape_feather.use": "cap that makes you high jumped was actully used!",
+	"subtitles.mubble.item.smash_ball.use": "sm4sh bol uzd",
 	"//subtitles.costume.cappy.ambient": "<newline>",
 	"//subtitles.costume.cappy.ambient.nether": "<newline>",
 	"//subtitles.costume.cappy.equip": "<newline>",
@@ -892,9 +897,9 @@
 	"//subtitles.entity.chincho.ambient": "Chincho talks",
 	"//subtitles.entity.chincho.hurt": "Chincho hurts",
 	"//subtitles.entity.chincho.death": "Chincho dies",
-	"subtitles.entity.toad.ambient": "tod bups",
-	"subtitles.entity.toad.hurt": "todtod oofs",
-	"subtitles.entity.toad.death": "tod ded",
+	"subtitles.mubble.entity.toad.ambient": "tod bups",
+	"subtitles.mubble.entity.toad.hurt": "todtod oofs",
+	"subtitles.mubble.entity.toad.death": "tod ded",
 	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
 	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
 	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
