--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -882,8 +882,8 @@
 
 	"comment": "SUBTITLES",
 	"subtitles.mubble.block.note_block.jump": "pǝsn ʞɔolᗺ ǝʇoN",
-	"subtitles.mubble.block.question_block.mubble.loot.power_up": "dn ɹǝʍod sdoɹp ʞɔolᗺ ¿",
-	"subtitles.mubble.block.question_block.mubble.loot.coin": "uᴉoɔ sdoɹp ʞɔolᗺ ¿",
+	"subtitles.mubble.block.question_block.loot.power_up": "dn ɹǝʍod sdoɹp ʞɔolᗺ ¿",
+	"subtitles.mubble.block.question_block.loot.coin": "uᴉoɔ sdoɹp ʞɔolᗺ ¿",
 	"subtitles.mubble.block.spring.trigger": "pǝɹǝƃƃᴉɹʇ ƃuᴉɹdS",
 	"subtitles.mubble.item.annoying_dog.disappear": "sɹɐǝddɐsᴉp ƃop ƃuᴉʎouu∀",
 	"subtitles.mubble.item.annoying_dog.bark": "sʞɹɐq ƃop ƃuᴉʎouu∀",
