--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -882,8 +882,8 @@
 
 	"comment": "SUBTITLES",
 	"//subtitles.block.note_block.jump": "<newline>",
-	"subtitles.mubble.block.question_block.mubble.loot.super_mushroom": "BLOCO ???? drop supa mush",
-	"subtitles.mubble.block.question_block.mubble.loot.coin": "BLOCO ???? drop coin",
+	"subtitles.mubble.block.question_block.loot.super_mushroom": "BLOCO ???? drop supa mush",
+	"subtitles.mubble.block.question_block.loot.coin": "BLOCO ???? drop coin",
 	"//subtitles.block.spring.trigger": "Spring triggered",
 	"//subtitles.item.annoying_dog.disappear": "<newline>",
 	"//subtitles.item.annoying_dog.bark": "<newline>",
