--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -882,8 +882,8 @@
 
 	"comment": "SUBTITLES",
 	"//subtitles.block.note_block.jump": "<newline>",
-	"subtitles.mubble.block.question_block.mubble.loot.super_mushroom": "问号块:掉落超级蘑菇",
-	"subtitles.mubble.block.question_block.mubble.loot.coin": "问号块:掉落硬币",
+	"subtitles.mubble.block.question_block.loot.super_mushroom": "问号块:掉落超级蘑菇",
+	"subtitles.mubble.block.question_block.loot.coin": "问号块:掉落硬币",
 	"//subtitles.block.spring.trigger": "Spring triggered",
 	"//subtitles.item.annoying_dog.disappear": "<newline>",
 	"//subtitles.item.annoying_dog.bark": "<newline>",
