--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -882,7 +882,7 @@
 
 	"comment": "SUBTITLES",
 	"subtitles.mubble.block.note_block.jump": "Bloc note utilisé",
-	"subtitles.mubble.block.question_block.loot.super_mushroom": "Super champignon sorti d'un bloc ?",
+	"subtitles.mubble.block.question_block.loot.power_up": "Objet sorti d'un bloc ?",
 	"subtitles.mubble.block.question_block.loot.coin": "Pièce sortie d'un bloc ?",
 	"subtitles.mubble.block.spring.trigger": "Ressort déclenché",
 	"subtitles.mubble.item.annoying_dog.disappear": "Disparition de chien agaçant",
