--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -881,29 +881,29 @@
 
 
 	"comment": "SUBTITLES",
-	"//subtitles.block.note_block.jump": "<newline>",
-	"subtitles.mubble.block.question_block.loot.super_mushroom": "BLOCO ???? drop supa mush",
+	"//subtitles.mubble.block.note_block.jump": "<newline>",
+	"//subtitles.mubble.block.question_block.loot.power_up": "? Block drops power up",
 	"subtitles.mubble.block.question_block.loot.coin": "BLOCO ???? drop coin",
-	"//subtitles.block.spring.trigger": "Spring triggered",
-	"//subtitles.item.annoying_dog.disappear": "<newline>",
-	"//subtitles.item.annoying_dog.bark": "<newline>",
+	"//subtitles.mubble.block.spring.trigger": "Spring triggered",
+	"//subtitles.mubble.item.annoying_dog.disappear": "<newline>",
+	"//subtitles.mubble.item.annoying_dog.bark": "<newline>",
 	"subtitles.mubble.item.cape_feather.use": "cap that makes you high jumped was actully used!",
 	"subtitles.mubble.item.smash_ball.use": "sm4sh bol uzd",
-	"//subtitles.costume.cappy.ambient": "<newline>",
-	"//subtitles.costume.cappy.ambient.nether": "<newline>",
-	"//subtitles.costume.cappy.equip": "<newline>",
-	"//subtitles.costume.cappy.happy": "<newline>",
-	"//subtitles.costume.cappy.help": "<newline>",
-	"//subtitles.entity.chincho.ambient": "Chincho talks",
-	"//subtitles.entity.chincho.hurt": "Chincho hurts",
-	"//subtitles.entity.chincho.death": "Chincho dies",
+	"//subtitles.mubble.costume.cappy.ambient": "<newline>",
+	"//subtitles.mubble.costume.cappy.ambient.nether": "<newline>",
+	"//subtitles.mubble.costume.cappy.equip": "<newline>",
+	"//subtitles.mubble.costume.cappy.happy": "<newline>",
+	"//subtitles.mubble.costume.cappy.help": "<newline>",
+	"//subtitles.mubble.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.mubble.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.mubble.entity.chincho.death": "Chincho dies",
 	"subtitles.mubble.entity.toad.ambient": "tod bups",
 	"subtitles.mubble.entity.toad.hurt": "todtod oofs",
 	"subtitles.mubble.entity.toad.death": "tod ded",
-	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
-	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
-	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
-	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
+	"//subtitles.mubble.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.mubble.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.mubble.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.mubble.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
