--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -894,16 +894,16 @@
 	"subtitles.mubble.costume.cappy.equip": "pǝdᴉnbǝ ʎddɐƆ",
 	"subtitles.mubble.costume.cappy.happy": "sǝlqɯnɯ ʎlƃuᴉoɾuǝ ʎddɐƆ",
 	"subtitles.mubble.costume.cappy.help": "dlǝɥ ɹoɟ sʞsɐ ʎddɐƆ",
-	"//subtitles.entity.chincho.ambient": "Chincho talks",
-	"//subtitles.entity.chincho.hurt": "Chincho hurts",
-	"//subtitles.entity.chincho.death": "Chincho dies",
+	"//subtitles.mubble.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.mubble.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.mubble.entity.chincho.death": "Chincho dies",
 	"subtitles.mubble.entity.toad.ambient": "sǝlqɯnɯ pɐo┴",
 	"subtitles.mubble.entity.toad.hurt": "sʇɹnɥ pɐo┴",
 	"subtitles.mubble.entity.toad.death": "sǝᴉp pɐo┴",
-	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
-	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
-	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
-	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
+	"//subtitles.mubble.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.mubble.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.mubble.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.mubble.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
