--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -894,16 +894,16 @@
 	"subtitles.mubble.costume.cappy.equip": "Cappy chegou na cabeça de alguém",
 	"subtitles.mubble.costume.cappy.happy": "Cappy murmura apreciavelmente",
 	"subtitles.mubble.costume.cappy.help": "Cappy pede por ajuda",
-	"//subtitles.entity.chincho.ambient": "Chincho talks",
-	"//subtitles.entity.chincho.hurt": "Chincho hurts",
-	"//subtitles.entity.chincho.death": "Chincho dies",
+	"//subtitles.mubble.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.mubble.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.mubble.entity.chincho.death": "Chincho dies",
 	"subtitles.mubble.entity.toad.ambient": "Toad murmura",
 	"subtitles.mubble.entity.toad.hurt": "Toad senti dor",
 	"subtitles.mubble.entity.toad.death": "Toad morre",
-	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
-	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
-	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
-	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
+	"//subtitles.mubble.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.mubble.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.mubble.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.mubble.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
