--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -881,29 +881,29 @@
 
 
 	"comment": "SUBTITLES",
-	"//subtitles.block.note_block.jump": "<newline>",
-	"subtitles.mubble.block.question_block.loot.super_mushroom": "问号块:掉落超级蘑菇",
+	"//subtitles.mubble.block.note_block.jump": "<newline>",
+	"//subtitles.mubble.block.question_block.loot.power_up": "? Block drops power up",
 	"subtitles.mubble.block.question_block.loot.coin": "问号块:掉落硬币",
-	"//subtitles.block.spring.trigger": "Spring triggered",
-	"//subtitles.item.annoying_dog.disappear": "<newline>",
-	"//subtitles.item.annoying_dog.bark": "<newline>",
+	"//subtitles.mubble.block.spring.trigger": "Spring triggered",
+	"//subtitles.mubble.item.annoying_dog.disappear": "<newline>",
+	"//subtitles.mubble.item.annoying_dog.bark": "<newline>",
 	"subtitles.mubble.item.cape_feather.use": "披风羽毛:被使用",
 	"subtitles.mubble.item.smash_ball.use": "粉碎球:被使用",
-	"//subtitles.costume.cappy.ambient": "<newline>",
-	"//subtitles.costume.cappy.ambient.nether": "<newline>",
-	"//subtitles.costume.cappy.equip": "<newline>",
-	"//subtitles.costume.cappy.happy": "<newline>",
-	"//subtitles.costume.cappy.help": "<newline>",
-	"//subtitles.entity.chincho.ambient": "Chincho talks",
-	"//subtitles.entity.chincho.hurt": "Chincho hurts",
-	"//subtitles.entity.chincho.death": "Chincho dies",
+	"//subtitles.mubble.costume.cappy.ambient": "<newline>",
+	"//subtitles.mubble.costume.cappy.ambient.nether": "<newline>",
+	"//subtitles.mubble.costume.cappy.equip": "<newline>",
+	"//subtitles.mubble.costume.cappy.happy": "<newline>",
+	"//subtitles.mubble.costume.cappy.help": "<newline>",
+	"//subtitles.mubble.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.mubble.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.mubble.entity.chincho.death": "Chincho dies",
 	"subtitles.mubble.entity.toad.ambient": "奇诺比奥:咕哝",
 	"subtitles.mubble.entity.toad.hurt": "奇诺比奥:受伤",
 	"subtitles.mubble.entity.toad.death": "奇诺比奥:死亡",
-	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
-	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
-	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
-	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
+	"//subtitles.mubble.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.mubble.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.mubble.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.mubble.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
