--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -881,29 +881,29 @@
 
 
 	"comment": "SUBTITLES",
-	"//subtitles.block.note_block.jump": "<newline>",
+	"//subtitles.mubble.block.note_block.jump": "<newline>",
 	"subtitles.mubble.block.question_block.loot.power_up": "問號塊:掉落超級蘑菇",
 	"subtitles.mubble.block.question_block.loot.coin": "問號塊:掉落硬幣",
-	"//subtitles.block.spring.trigger": "Spring triggered",
-	"//subtitles.item.annoying_dog.disappear": "<newline>",
-	"//subtitles.item.annoying_dog.bark": "<newline>",
+	"//subtitles.mubble.block.spring.trigger": "Spring triggered",
+	"//subtitles.mubble.item.annoying_dog.disappear": "<newline>",
+	"//subtitles.mubble.item.annoying_dog.bark": "<newline>",
 	"subtitles.mubble.item.cape_feather.use": "披風羽毛:被使用",
 	"subtitles.mubble.item.smash_ball.use": "粉碎球:被使用",
-	"//subtitles.costume.cappy.ambient": "<newline>",
-	"//subtitles.costume.cappy.ambient.nether": "<newline>",
-	"//subtitles.costume.cappy.equip": "<newline>",
-	"//subtitles.costume.cappy.happy": "<newline>",
-	"//subtitles.costume.cappy.help": "<newline>",
-	"//subtitles.entity.chincho.ambient": "Chincho talks",
-	"//subtitles.entity.chincho.hurt": "Chincho hurts",
-	"//subtitles.entity.chincho.death": "Chincho dies",
+	"//subtitles.mubble.costume.cappy.ambient": "<newline>",
+	"//subtitles.mubble.costume.cappy.ambient.nether": "<newline>",
+	"//subtitles.mubble.costume.cappy.equip": "<newline>",
+	"//subtitles.mubble.costume.cappy.happy": "<newline>",
+	"//subtitles.mubble.costume.cappy.help": "<newline>",
+	"//subtitles.mubble.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.mubble.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.mubble.entity.chincho.death": "Chincho dies",
 	"subtitles.mubble.entity.toad.ambient": "奇諾比奧:咕噥",
 	"subtitles.mubble.entity.toad.hurt": "奇諾比奧:受傷",
 	"subtitles.mubble.entity.toad.death": "奇諾比奧:死亡",
-	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
-	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
-	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
-	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
+	"//subtitles.mubble.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.mubble.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.mubble.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.mubble.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
